@@ -80,6 +80,7 @@ typedef struct globalopts_struct {
 	OPT_CONSOLETYPE menu, text, cscan, scroll, intro, meleezoom, shield;
 	CONTROL_TEMPLATE player1, player2;
 	int speechvol, musicvol, sfxvol;
+	int gamma;
 } GLOBALOPTS;
 
 void SetupMenu (void);
